--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- Links de entrar e cadastrar -->
     <div class="header-links">
       <a href="components/login/login.php">Entrar</a>
-      <a href="cadastro.html">Cadastrar</a>
+      <a href="components/login/cadastrar.php">Cadastrar</a>
     </div>
 
     <!-- Conteúdo da página de boas-vindas -->
@@ -117,7 +117,7 @@
       </p>
 
       <!-- Seção de Mensalidade -->
-      <a href="cadastrar.php"
+      <a href="components/login/cadastrar.php"
         ><div class="mensalidade">Mensalidade: R$59,90</div></a
       >
 
